feat: Implement secure backend with JWT authentication and RBAC system
- Add Express.js backend with SQLite database
- Implement JWT-based authentication with access/refresh tokens
- Add Role-Based Access Control (Admin, Manager, Sales Rep)
- Create secure API endpoints for customers and leads
- Add comprehensive audit trail system
- Implement password hashing and account security
- Add rate limiting and security headers
- Create database seeding with demo data
- Update frontend API client for secure backend integration
- Add comprehensive documentation for backend and API
- Configure proper .gitignore for sensitive files

Key Features:
- JWT authentication with role-based permissions
- Data filtering based on user roles and ownership
- Secure password handling with bcrypt
- Comprehensive API documentation
- Production-ready security middleware
- Complete audit trail for all operations

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ yarn-error.*
 
 # local env files
 .env*.local
+.env
 
 # typescript
 *.tsbuildinfo
@@ -41,3 +42,29 @@ app-example
 # generated native folders
 /ios
 /android
+
+# Backend specific
+server/.env
+server/crm_database.db
+server/node_modules/
+server/npm-debug.*
+server/yarn-debug.*
+server/yarn-error.*
+
+# Documentation (sensitive)
+projectoverview.md
+rbac.md
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
